--- a/views/index-eruby.html
+++ b/views/index-eruby.html
@@ -5,20 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="shortcut icon" href="../../assets/ico/favicon.png">
+  <link rel="shortcut icon" href="/bootstrap/favicon.png">
 
   <title> <%= title %></title>
-  <
   <!-- Bootstrap core CSS -->
-  <link href="./bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="/bootstrap/css/bootstrap.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="./bootstrap/css/sticky-footer.css" rel="stylesheet">
+  <link href="/bootstrap/css/sticky-footer.css" rel="stylesheet">
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="../../assets/js/html5shiv.js"></script>
-      <script src="../../assets/js/respond.min.js"></script>
+      <script src="/bootstrap/js/html5shiv.js"></script>
+      <script src="/bootstrap//respond.min.js"></script>
       <![endif]-->
     </head>
 
@@ -32,17 +31,15 @@
           <div class="page-header">
             <h1><%= title %></h1>
           </div>
-          <ul>
+          <ol>
             <% links.each do |link| %>
             <li><a href="<%= link[1] %>"><%= link[0] %></a></li>
             <% end %>
-          </ul>
-          <hr>
-          <div class="btn-group">
-            <button type="button" class="btn btn-default"><a href="../">更多该校文章</a></button>
-            <button type="button" class="btn btn-default"><a href="/">主页</a></button>
-          </div>
-        </div>
+          </ol>
+          <br>
+          <a class="btn btn-default" href="../">上一级</a>
+          <a class="btn btn-default" href="/">主页</a>
+          <br><br>
       </div>
 
       <div id="footer">
