--- a/views/post-eruby.html
+++ b/views/post-eruby.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="../../assets/ico/favicon.png">
+    <link rel="shortcut icon" href="/bootstrap/favicon.png">
 
     <title><%= @mytitle %></title>
 
     <!-- Bootstrap core CSS -->
-    <link href="./bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="./bootstrap/css/sticky-footer.css" rel="stylesheet">
+    <link href="/bootstrap/css/sticky-footer.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="../../assets/js/html5shiv.js"></script>
-      <script src="../../assets/js/respond.min.js"></script>
+      <script src="/bootstrap/js/html5shiv.js"></script>
+      <script src="/bootstrap/js/respond.min.js"></script>
     <![endif]-->
   </head>
 
@@ -33,12 +33,10 @@
           <h1><%= @mytitle %></h1>
         </div>
         <%= @html_body %>
-        <hr>
-        <div class="btn-group">
-          <button type="button" class="btn btn-default"><a href="../">更多该校文章</a></button>
-          <button type="button" class="btn btn-default"><a href="/">主页</a></button>
-        </div>
-      </div>
+        <br>
+        <a class="btn btn-default" href="../">更多该校文章</a>
+        <a class="btn btn-default" href="/">主页</a>
+        <br><br>
     </div>
 
     <div id="footer">
