学校文章列表和学校文章在同一个目录

--- a/views/post-eruby.html
+++ b/views/post-eruby.html
@@ -34,7 +34,7 @@
         </div>
         <%= @html_body %>
         <br>
-        <a class="btn btn-default" href="../">更多该校文章</a>
+        <a class="btn btn-default" href="./">更多该校文章</a>
         <a class="btn btn-default" href="/">主页</a>
         <br><br>
     </div>
