index.html中链接名称不带html后缀且将下划线替换为空格

--- a/views/index-eruby.html
+++ b/views/index-eruby.html
@@ -44,7 +44,7 @@
 
       <div id="footer">
         <div class="container">
-          <p class="text-muted credit">承办<a href="http://2u4u.com.cn">悠游网</a> 技术支持 <a href="#">xb</a>.</p>
+          <p class="text-muted credit">承办<a href="http://2u4u.com.cn">悠游网</a> 技术支持 <em>xb</em>.</p>
         </div>
       </div>
 
